--- a/.jshintrc
+++ b/.jshintrc
@@ -14,7 +14,7 @@
   "quotmark": "single",
   "undef": true,
   "unused": true,
-  "strict": false,
+  "strict": true,
   "trailing": true,
   "browser": true,
   "devel": true,
