road to fronty5, global changes

--- a/app/templates/.jshintrc
+++ b/app/templates/.jshintrc
@@ -24,6 +24,7 @@
   "globals": {
     "gState": false,
     "gBlocks": false,
+    "gFish": false,
     "devTemplates": false,
     "devBlocks": false,
     "templates": false
