--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,5 @@
 {
-//  "camelcase": true,
+  "camelcase": true,
   "curly": true,
   "eqeqeq": true,
   "forin": true,
@@ -7,7 +7,7 @@
   "indent": 2,
   "immed": true,
   "latedef": true,
-  "newcap": true,
+  "newcap": false,
   "noarg": true,
   "noempty": true,
   "nonew": true,
@@ -24,6 +24,7 @@
   "globals": {
     "gState": false,
     "gBlocks": false,
+    "gFish": false,
     "devTemplates": false,
     "devBlocks": false,
     "templates": false
